# entailforge

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
src/entailforge/: __init__.py  api.py  cli.py
src/entailforge/data/: __init__.py  dataset.py  generator.py  preprocessing.py  schema.py
src/entailforge/evaluation/: evaluator.py  metrics.py
src/entailforge/inference/: __init__.py  export.py  predictor.py
src/entailforge/models/: __init__.py  encoder.py  factory.py
src/entailforge/training/: engine.py  pipeline.py
src/entailforge/utils/: config.py  device.py  logging.py  seed.py
tests/: conftest.py  test_api.py  test_data.py  test_inference.py  test_model.py  test_pipeline.py
